<resources>
    <string name="app_name">Manga App</string>

    //Landing Page
    <string name="title_home">Home</string>
    <string name="title_download">Download</string>
    <string name="title_notifications">Notifications</string>

    //Home Page
    <string name="latest_update">Latest Updates</string>

    //Search Page
    <string name="search_title">Title</string>
    <string name="search_author">Author</string>
    <string name="search_status">Status</string>
    <string name="search_demographic">Demographics</string>
    <string name="search_warning">Warning</string>
    <string name="search_genres">Genre</string>
    <string name="search_theme">Theme</string>
    <string name="search_format">Format</string>
    <string name="search_optional">Optional</string>
    <string name="search_button">Search</string>

    //Status
    <string name="status_ongoing">Ongoing</string>
    <string name="status_completed">Completed</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_hiatus">Hiatus</string>

    //Demographic
    <string name="demographic_shounen">Shounen</string>
    <string name="demographic_shoujo">Shoujo</string>
    <string name="demographic_seinen">Seinen</string>
    <string name="demographic_josei">Josei</string>

    //Warning
    <string name="warning_ecchi">Ecchi</string>
    <string name="warning_gore">Gore</string>
    <string name="warning_sv">Sexual Violence</string>
    <string name="warning_smut">Smut</string>

    //Genre
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_historical">Historical</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_isekai">Isekai</string>
    <string name="genre_magical">Magical Girls</string>
    <string name="genre_mecha">Mecha</string>
    <string name="genre_medical">Medical</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_philosophical">Philosophical</string>
    <string name="genre_psychological">Psychological</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_scifi">Sci-Fi</string>
    <string name="genre_shoujoai">Shoujo Ai</string>
    <string name="genre_shounenai">Shounen Ai</string>
    <string name="genre_sliceoflife">Slice of Life</string>
    <string name="genre_sports">Sports</string>
    <string name="genre_superhero">Superhero</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_tragedy">Tragedy</string>
    <string name="genre_wuxia">Wuxia</string>
    <string name="genre_yaoi">Yaoi</string>
    <string name="genre_yuri">Yuri</string>

    //Format
    <string name="format_4koma">4-Koma</string>
    <string name="format_adaptation">Adaptation</string>
    <string name="format_anthology">Anthology</string>
    <string name="format_award">Award Winning</string>
    <string name="format_doujinshi">Doujinshi</string>
    <string name="format_fan">Fan Coloured</string>
    <string name="format_full">Full Color</string>
    <string name="format_long">Long Strip</string>
    <string name="format_official">Official Colored</string>
    <string name="format_oneshot">Oneshot</string>
    <string name="format_user">User Created</string>
    <string name="format_web">Web Comic</string>

</resources>
