<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                style="@style/Search_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_title" />

            <!--TODO: Change the accent of the sliders-->
            <EditText
                android:id="@+id/edit_title"
                style="@style/Search_Edit_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Search_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_padding"
                android:text="@string/search_author" />

            <!--TODO: Change the accent of the sliders-->
            <EditText
                android:id="@+id/edit_author"
                style="@style/Search_Edit_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Search_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_padding"
                android:text="@string/search_status" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacing="5dp" />

            <TextView
                style="@style/Search_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_padding"
                android:text="@string/search_demographic" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/demographics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacing="5dp" />

            <TextView
                style="@style/Search_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_padding"
                android:text="@string/search_warning" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/warnings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacing="5dp" />

            <TextView
                style="@style/Search_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_padding"
                android:text="@string/search_genres" />

<!--            <com.google.android.material.chip.ChipGroup-->
<!--                android:id="@+id/genres"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:chipSpacing="5dp" />-->

            <com.hajesha.mangaapp.customViews.DynamicGrid
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genres"
                app:columnWidth="@dimen/chip_width"
                android:useDefaultMargins="true"/>

<!--            <com.google.android.flexbox.FlexboxLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/genres"-->
<!--                app:flexWrap="wrap"-->
<!--                app:alignItems="stretch"-->
<!--                app:alignContent="stretch"/>-->
<!--            <GridLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:useDefaultMargins="true"-->
<!--                android:layout_gravity="center"-->
<!--                android:columnCount="5"-->
<!--                android:id="@+id/genres"/>-->

            <TextView
                style="@style/Search_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_padding"
                android:text="@string/search_theme" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacing="5dp" />

            <TextView
                style="@style/Search_Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_padding"
                android:text="@string/search_format" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacing="5dp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/search_button"
        style="@style/Search_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:elevation="4dp"
        android:text="@string/search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>